# ipc-solidity-actors

./: .env.template  .gitignore  .gitmodules  .prettierignore  .prettierrc  .prettierrc.js  .solhint.json  Makefile  README.md  SECURITY.md  errorCode.json  foundry.toml  h --set-upstream origin validators  hardhat.config.ts  package-lock.json  package.json  slither.config.json
.husky/: pre-push
.storage-layouts/: GatewayActorModifiers.json  GatewayDiamond.json  SubnetActorDiamond.json  SubnetActorModifiers.json
binding/: Cargo.toml  build.rs
binding/src/: convert.rs  diamond_cut_facet.rs  diamond_loupe_facet.rs  gateway_diamond.rs  gateway_getter_facet.rs  gateway_manager_facet.rs  gateway_messenger_facet.rs  gateway_router_facet.rs  lib.rs  lib_gateway.rs  lib_quorum.rs  lib_staking.rs  lib_staking_change_log.rs  subnet_actor_diamond.rs  subnet_actor_getter_facet.rs  subnet_actor_manager_facet.rs  subnet_getter_facet.rs  subnet_registry.rs  subnet_registry_diamond.rs
cache/: solidity-files-cache.json
deploy/: Deployer.sol
deployment/: Cargo.toml
deployment/src/: main.rs
ops/: chain-id.sh  compile-abi.sh  deploy-gw.sh  deploy-libs.sh  deploy-reg.sh  deploy-subnet.sh  deploy.sh  upgrade-gw-diamond.sh
script/: Deployer.sol
scripts/: Deployer.sol  all_selectors.py  deploy-gateway.template  deploy-gateway.template.ts  deploy-gateway.ts  deploy-gw-diamond.ts  deploy-libraries.ts  deploy-registry.template  deploy-registry.template.ts  deploy-registry.ts  deploy-sa-diamond.ts  deploy-subnet.ts  deploy.ts  erc20-deploy.ts  erc20-mint.ts  upgrade-gw-diamond.ts  (+3 more)
(+293 files in other folders)
