[package]
name = "ipc_actors_abis"
description = "Rust bindings for the IPC Solidity Actors"
version = "0.1.0"
authors = ["Protocol Labs"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
ethers = { version = "2.0", features = ["abigen", "ws"] }
fvm_shared = { git = "https://github.com/filecoin-project/ref-fvm", branch = "upgrade-fvm", features = ["crypto"] }
anyhow = { version = "1.0" }

[build-dependencies]
ethers = { version = "2.0", features = ["abigen", "ws"] }
