[package]
name = "ipc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.96"
tokio = { version = "1.28.1", features = ["full"] }
hex = "0.4.3"
secp256k1 = "0.21.3"
ethers = "2.0.4"
url = "2.3.1"
dotenv = "0.15.0"
